@@ -1,3 +1,4 @@
+
 # CS1530-Final-Project
 
 This is our finance app for the final project, the features worked on included the budget and monitor feature, the application is modular with an easy to improve upon codebase.
@@ -19,6 +20,7 @@ FinanceApp is a comprehensive financial management desktop application developed
 
 - Java 11 or higher
 - JavaFX SDK
+- Maven (to handle dependencies and build the project)
 - Any IDE that supports Java (e.g., IntelliJ IDEA, Eclipse)
 
 ### Installation
@@ -26,33 +28,38 @@ FinanceApp is a comprehensive financial management desktop application developed
 1. **Clone the repository**:
 
    ```bash
-   git clone https://github.com/yourusername/FinanceApp.git
+   git clone https://github.com/SalemZenati/CS1530-Final-Project.git
    cd FinanceApp
    ```
 
 2. **Set up JavaFX**:
 
-   - Download JavaFX SDK and configure it in your IDE. Ensure that the SDK's `lib` directory is added to your project's library path.
+   - Ensure JavaFX SDK is installed and configured in your IDE. The SDK's `lib` directory should be added to your project's library path.
 
-3. **Set up/Install Maven**:
+3. **Use Maven to build and run the application**:
 
-   - Download Maven to your system and configure it in your IDE. Ensure that the Maven's `bin` directory is added to your system's PATH, this should
-   be done for you upon compilation, but check to make sure.
-
-3. **Compile and run the application**:
-
-   Depending on your IDE, you can directly run the `FinanceApp.java` file, or use the following commands if running from the command line:
+   - Make sure Maven is installed and configured properly on your system. In the project directory, you can build and run the application using Maven:
 
    ```bash
-   javac --module-path path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml -d out src/com/example/*.java
-   java --module-path path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml -cp out com.example.FinanceApp
+   mvn clean javafx:run
    ```
+
+   This command will compile the code and launch the application with the required JavaFX modules.
 
 ### Configuration
 
 - Ensure that the `Data.txt` file is located in the root directory of the project or adjust the path in the `Parser.java` file accordingly.
 
 ## Usage
+
+Upon launching the application, you will be presented with a series of tabs:
+- **Budget**: Manage and track your budgets.
+- **Monitor**: View all your financial accounts and the progress of your budgets.
+- The other tabs present are non-functional at the moment, but additional features can be added.
+
+```
+
+Remember to check if the project has a `pom.xml` file with the correct configuration for Maven and JavaFX. This file should define the dependencies and plugins needed to build and run your JavaFX application. If the project does not have one, or if it's not set up for JavaFX, you'll need to create or update it accordingly.
 
 Upon launching the application, you will be presented with a series of tabs:
 - **Budget**: Manage and track your budgets.
